# lantern-lang

./: Cargo.toml  README.md
builtin/: Cargo.toml  std.la
builtin/src/: lib.rs  op.rs
cli/: Cargo.toml
cli/src/: main.rs
lang/: Cargo.toml
lang/src/: error.rs  lib.rs  module.rs  record.rs  scope.rs
lantern/: Cargo.toml
lantern/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
parse/: Cargo.toml
parse/src/: ast.rs  error.rs  lib.rs  read.rs  tokenizer.rs
parse/src/ast/: expr.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: fizzbuzz.la  helloworld.la  roman_numeral.la
scripts/mod/: extern.la  main.la
scripts/tests/: hoisting.la  option.la  reassign.la  rec.la  result.la
syntax/: la.vim
